# 2-semestr

labs/: 1
labs/lab1/: 22  CMakeLists.txt  main.cpp
labs/lab5/: CMakeLists.txt  main.cpp
labs/lab5/inc/: Vector.h  VectorBool.h
labs/lab6/: CMakeLists.txt  log.txt  main.cpp
labs/lab6/inc/: Logger.h
labs/lab6/src/: Logger.cpp
labs/lab7/: CMakeLists.txt  FigureBase.h  Figures.h  main.cpp
labs/lab8/: CMakeLists.txt  Stack.h  main.cpp
practice/: practice1  practice1.cpp  practice2.cpp  practice3.cpp  practice4.cpp
